tests/compilefail19.out
[1mtests/compilefail19.pas:4:28: [0m[1m[91merror:[0m Expected ':' but saw 'integer'
     4 | function addone(r:integer) integer ;